--- a/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
@@ -17,9 +17,10 @@
                 <author role="translatorEng" ref="eft:person-319">Ryan Conlon</author>
                 <author role="translatorEng" ref="eft:person-321">Paul Thomas</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.e">
@@ -38,17 +39,25 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T12:00:41.232Z" user="admin">15/07/2022 12:00:41</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:17:32.84Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:17:57.324Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:56:43.891Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-16T09:57:47.288Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-13T10:28:53.671Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T12:01:17.724Z" user="admin">15/07/2022 12:01:17</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:17:32.84Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:17:57.324Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-16T09:55:14.487Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-16T09:56:43.891Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-16T09:57:47.288Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-13T10:28:27.874Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-13T10:28:53.671Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-30T13:27:39.951Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-15T12:01:09.883Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
