--- a/translations/kangyur/placeholders/088-022_toh528,858-the_incantation_the_supreme_lamp.xml
+++ b/translations/kangyur/placeholders/088-022_toh528,858-the_incantation_the_supreme_lamp.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2022</date>
+                <edition>v 0.0.14 <date>2022</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-088-022"/>
                 <date/>
             </publicationStmt>
@@ -45,7 +45,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-04T12:31:26.932Z" user="admin">04/07/2022 12:31:26</note>
+                <note type="lastUpdated" date-time="2022-07-15T12:43:13.922Z" user="admin">15/07/2022 12:43:13</note>
     <note type="updated" update="translation-status" value="4" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">4</note>
 
     <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">0.0.1</note>
@@ -77,6 +77,8 @@
     <note type="updated" update="text-version" value="0.0.12" date-time="2022-04-21T10:04:51.544Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.c" date-time="2022-07-04T12:31:18.976Z" user="line-tofte">2.c</note>
     <note type="updated" update="text-version" value="0.0.13" date-time="2022-07-04T12:31:18.976Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.b" date-time="2022-07-15T12:43:06.088Z" user="line-tofte">2.b</note>
+    <note type="updated" update="text-version" value="0.0.14" date-time="2022-07-15T12:43:06.088Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
