--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'od zer can gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">mārīcīdhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Mārīcī</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mārīcī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamārīcīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
@@ -17,14 +17,13 @@
                 <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-090-008"/>
                 <date/>
-
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh564" type="text">
@@ -47,13 +46,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-08T15:19:00.363Z" user="admin">08/03/2021 15:19:00</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:43:28.09Z" user="admin">15/07/2022 14:43:28</note>
             
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">0.0.1</note>
 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:18:23.639Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:18:40.624Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-08T15:18:56.561Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-08T15:18:56.561Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
