--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -4,20 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">'od zer can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mārīcīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mārīcī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mārīcīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">'od zer can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamārīcīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamārīcīnāmadhāraṇī</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -46,13 +45,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:43:28.09Z" user="admin">15/07/2022 14:43:28</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:18:23.639Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:18:40.624Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-08T15:18:56.561Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:44:09.05Z" user="admin">15/07/2022 14:44:09</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:18:23.639Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:18:40.624Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-08T15:18:56.561Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-15T14:44:06.979Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
