--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">māyāmārīcījātatantrād uddhṛtaḥ kalparājāḥ</title>
                 <title type="mainTitle" xml:lang="en">The Sovereign Practices Extracted from the Tantra of Māyāmārīcī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">māyāmārīcījātatantrād uddhṛtaḥ kalparājāḥ</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">māyāmārīcījātatantrād uddhṛtaḥ kalparājo nāma</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po zhes bya ba/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -35,12 +36,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:45:02.576Z" user="admin">15/07/2022 14:45:02</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:24:24.546Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:24:36.777Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:45:39.235Z" user="admin">15/07/2022 14:45:39</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:24:24.546Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:24:36.777Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:45:37.176Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
