--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -14,14 +14,13 @@
                 <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-090-010"/>
                 <date/>
-
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh566" type="text">
@@ -35,12 +34,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-08T16:09:11.299Z" user="admin">08/03/2021 16:09:11</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:46:28.133Z" user="admin">15/07/2022 14:46:28</note>
             
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">0.0.1</note>
 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T16:08:54.101Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T16:09:08.421Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T16:09:08.421Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
