--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rgyud 'od zer can gyi rtog pa brgya phrag bdun pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Seven Hundred Practices of Mārīcī from the Tantras</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyud 'od zer can gyi rtog pa brgya phrag bdun pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud stong phrag bcu gnyis pa las mchog tu yang snying por gyur pa'i 'od zer can gyi rtog pa brgya phrag bdun pa phyung ba/</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -34,12 +35,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:46:28.133Z" user="admin">15/07/2022 14:46:28</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T16:08:54.101Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T16:09:08.421Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:47:09.129Z" user="admin">15/07/2022 14:47:09</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T16:08:54.101Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T16:09:08.421Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:47:07.082Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
