--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-071-002"/>
                 <date/>
             </publicationStmt>
@@ -35,11 +35,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-11T12:14:30.679Z" user="admin">11/07/2022 12:14:30</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:49:12.916Z" user="admin">15/07/2022 14:49:12</note>
                 <note type="updated" update="text-version" value="" date-time="2019-04-29T17:15:40.869Z" user="john"/>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-11T09:35:06.396Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-02-11T09:35:06.396Z" user="andreas">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-11T12:14:28.696Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
