--- a/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
@@ -21,11 +21,11 @@
                 <editor role="copyEditor" ref="eft:person-252">Dion Blundell</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-063-001"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-23T09:20:11.522Z" user="admin">23/02/2022 09:20:11</note>
+                <note type="lastUpdated" date-time="2022-07-15T14:53:01.766Z" user="admin">15/07/2022 14:53:01</note>
 
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
@@ -61,6 +61,8 @@
     <note type="updated" update="translation-status" value="2.e" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">2.e</note>
     <note type="updated" update="text-version" value="0.0.7" date-time="2022-02-23T09:19:40.463Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.8" date-time="2022-02-23T09:20:05.569Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="translation-status" value="2.d" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">2.d</note>
+    <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-15T14:52:53.958Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
