--- a/translations/kangyur/translations/055-004_toh130_illusory_absorption.xml
+++ b/translations/kangyur/translations/055-004_toh130_illusory_absorption.xml
@@ -25,7 +25,7 @@
                 <consultant role="advisor" ref="contributors.xml#person-49">Lama Karma Oser</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.26.9 <date>2022</date>
+                <edition>v 1.26.10 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -57,7 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-19T11:08:50.054Z" user="admin">19/07/2022 11:08:50</note>
+                <note type="lastUpdated" date-time="2022-07-19T11:25:15.001Z" user="admin">19/07/2022 11:25:15</note>
             <note type="updated" update="text-version" value="v 1.23" date-time="2019-06-18T16:12:36.19Z" user="celso">v 1.23 2019</note>
                 <note type="updated" update="text-version" value="v 1.24" date-time="2019-06-21T14:31:37.486Z" user="celso">v 1.24 2019</note>
                 <note type="updated" update="text-version" value="v 1.25" date-time="2019-07-26T22:30:04.74Z" user="laura">v 1.25 2019</note>
@@ -70,7 +70,7 @@
     <note type="updated" update="text-version" value="1.26.4" date-time="2021-02-10T18:55:44.605Z" user="celso">"scholar" to "preceptor" and added link to bibl</note>
     <note type="updated" update="text-version" value="1.26.5" date-time="2021-04-09T16:46:41.465Z" user="celso">Corrected mispelling of "Mahāsthāmaprāpta", corrected misnamed text at i.16</note>
     <note type="updated" update="text-version" value="1.26.6" date-time="2021-04-09T18:25:54.407Z" user="celso">Minor correction to bibl entry styles</note>
-    <note type="updated" update="text-version" value="1.26.7" date-time="2021-07-22T00:06:48.457Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.26.8" date-time="2022-03-09T21:23:01.238Z" user="celso">cached previously unliked glossary entry</note>    <note type="updated" update="text-version" value="1.26.9" date-time="2022-07-19T11:08:46.224Z" user="john">Additional info about Kṣemavatī.</note>
+    <note type="updated" update="text-version" value="1.26.7" date-time="2021-07-22T00:06:48.457Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.26.8" date-time="2022-03-09T21:23:01.238Z" user="celso">cached previously unliked glossary entry</note>    <note type="updated" update="text-version" value="1.26.9" date-time="2022-07-19T11:08:46.224Z" user="john">Additional info about Kṣemavatī.</note>    <note type="updated" update="text-version" value="1.26.10" date-time="2022-07-19T11:25:11.144Z" user="john">Typo corrected</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
