--- a/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
+++ b/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
@@ -33,11 +33,11 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to
                     translate all the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-10T18:29:11.006Z" user="admin">10/07/2022 18:29:11</note>
+                <note type="lastUpdated" date-time="2022-07-19T11:41:30.896Z" user="admin">19/07/2022 11:41:30</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T09:22:03.132Z" user="line-tofte">2.h</note>
@@ -113,6 +113,8 @@
     <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-10T10:48:55.38Z" user="john">Some minor edits and line spaces added.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-11T10:04:31.779Z" user="andre">Glossary status changed - activated in CG</note>
     <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-10T18:29:07.222Z" user="john">Harmonization of trailer and colophon</note>
+    <note type="updated" update="translation-status" value="1" date-time="2022-07-19T11:41:23.226Z" user="sameer">1</note>
+    <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-19T11:41:23.226Z" user="sameer">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
