--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -29,10 +29,10 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -65,7 +65,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-06T11:52:45.319Z" user="admin">06/07/2022 11:52:45</note>
+        <note type="lastUpdated" date-time="2022-07-19T11:43:59.844Z" user="admin">19/07/2022 11:43:59</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -101,6 +101,8 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2022-07-04T10:03:16.341Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T10:03:16.341Z" user="sameer">First published version</note>
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-06T11:52:41.388Z" user="martina-cotter">Updates through revisions.</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-07-19T11:43:52.174Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-19T11:43:52.174Z" user="sameer">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
